// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MAR-163 — explain_component output schema > not_found branch conforms + golden snapshot 1`] = `
{
  "message": "[text]",
  "status": "not_found",
}
`;

exports[`MAR-163 — explain_component output schema > ok branch conforms + golden snapshot 1`] = `
{
  "component_id": "human_approval_gate",
  "explanation": "[text]",
  "freshness": "[volatile]",
  "last_updated": "[volatile]",
  "name": "Human Approval Gate",
  "status": "ok",
}
`;

exports[`MAR-163 — get_playbook output schema > not_found branch conforms + golden snapshot 1`] = `
{
  "confidence": 0,
  "next_recommended_tools": [
    "compose_workflow_route",
    "list_known_routes",
  ],
  "status": "not_found",
  "summary_markdown": "[text]",
  "warnings": [
    "[text]",
  ],
}
`;

exports[`MAR-163 — get_playbook output schema > ok branch conforms + golden snapshot 1`] = `
{
  "confidence": 1,
  "graph_context": undefined,
  "matched_playbook_id": "codebase_agent_workflow",
  "next_recommended_tools": [
    "get_relevant_docs",
    "compose_workflow_route",
    "get_route",
    "get_graph_component",
  ],
  "playbook": {
    "avoid_when": [
      "autonomous direct-to-main commits without PR review",
      "large-scale cross-repo refactoring in a single agent run",
      "editing production database migrations without human review",
      "any edit to infrastructure-as-code without explicit sign-off",
    ],
    "best_for": [
      "feature implementation from a well-scoped issue description",
      "bug fix with regression test",
      "refactoring a specific module with existing test coverage",
      "dependency upgrade with test validation",
    ],
    "components": [
      "user_goal_intake",
      "codebase_scan",
      "plan_generation",
      "code_editing",
      "test_runner",
      "pr_summary",
      "human_approval_gate",
      "state_store",
    ],
    "deterministic_steps": [
      "codebase_scan",
      "test_runner",
    ],
    "edges": [
      "codebase_scan__produces__plan_generation",
      "plan_generation__produces__code_editing",
      "code_editing__produces__pr_summary",
      "code_editing__before__test_runner",
      "test_runner__before__pr_summary",
      "codebase_scan__before__code_editing",
      "pr_summary__safer_with__human_approval_gate",
      "plan_generation__tested__test_runner",
    ],
    "evals": [
      "edit compilation pass rate on 10 known test tasks",
      "test pass rate delta before and after full route run",
      "[text]",
      "PR summary completeness score on 5 test changesets",
      "regression test — known-good test suite stays green after full route run",
    ],
    "failure_modes": [
      "Plan references non-existent files due to stale codebase scan context",
      "Code edit produces syntactically valid but semantically incorrect change",
      "Test suite is flaky, producing false failure signal that halts progress",
      "[text]",
      "PR summary omits the rationale for why each change was made",
      "[text]",
      "[text]",
    ],
    "golden_path_route_id": "codebase_agent_route_v1",
    "guardrails": [
      "Do not give the agent write access to production systems or main branch directly",
      "Always create a feature branch before editing",
      "Require PR review before merge — never auto-merge agent-generated code",
      "Run tests after every plan step, not just the final one",
      "Do not edit infrastructure-as-code files without explicit scope constraint",
    ],
    "id": "codebase_agent_workflow",
    "implementation_steps": [
      "[text]",
      "[text]",
      "[text]",
      "[text]",
      "[text]",
      "[text]",
      "[text]",
      "Step 8: Surface PR summary to human_approval_gate before opening a PR",
    ],
    "llm_driven_steps": [
      "plan_generation",
      "code_editing",
      "pr_summary",
    ],
    "permissions": {},
    "recommended_architecture": {
      "pattern": "[text]",
      "why": "[text]",
    },
    "risk_level": "medium",
    "sources": [
      {
        "last_checked": "2026-01-20",
        "source_type": "unknown",
        "title": "SWE-bench — evaluating AI coding agents",
        "url": "https://www.swebench.com",
      },
      {
        "last_checked": "2026-06-01",
        "source_type": "official_docs",
        "title": "Cursor agent documentation",
        "url": "https://docs.cursor.com/agent",
      },
    ],
    "stack_id": "default_orchestratekit_stack",
    "status": "published",
    "summary": "[text]",
    "title": "Codebase Agent Workflow",
    "version": "1.0.0",
    "workflow_type": "coding-agent",
  },
  "status": "ok",
  "summary_markdown": "[text]",
  "warnings": [],
}
`;

exports[`MAR-163 — plan_workflow output schema > brief mode conforms + golden snapshot 1`] = `
{
  "approval_gate_advisory": null,
  "avoid_when_violations": [],
  "confidence_label": "medium",
  "credential_advisory": {
    "components_requiring_credentials": [],
    "secret_manager_recommendation": null,
  },
  "enforced_approval_gates": [
    "human_approval_gate",
  ],
  "evals_to_add": [
    "[codebase_scan] symbol extraction accuracy on known test repositories",
    "[plan_generation] plan completeness vs human-authored plan on known tasks",
    "[code_editing] compilation pass rate after edit on test suite",
    "[test_runner] flakiness rate on repeated runs of same test suite",
    "[pr_summary] human preference score vs baseline on known PR test cases",
  ],
  "execution_order": [
    "user_goal_intake",
    "codebase_scan",
    "plan_generation",
    "code_editing",
    "test_runner",
    "pr_summary",
    "state_store",
    "human_approval_gate",
  ],
  "goal": "scan a codebase, plan changes, edit code, run tests and write a PR summary",
  "model_tier_profile": {
    "frontier": [
      "plan_generation",
      "code_editing",
    ],
    "none": [
      "codebase_scan",
      "test_runner",
      "state_store",
      "human_approval_gate",
    ],
    "small": [
      "user_goal_intake",
    ],
    "standard": [
      "pr_summary",
    ],
  },
  "next_steps": [
    "get_playbook({ id: "codebase_agent_workflow" })",
    "get_route({ id: "codebase_agent_route_v1", include_component_details: true })",
    "get_graph_component",
  ],
  "plan_source": "playbook",
  "planning_order": [
    "user_goal_intake",
    "codebase_scan",
    "plan_generation",
    "code_editing",
    "test_runner",
    "pr_summary",
    "human_approval_gate",
    "state_store",
  ],
  "playbook": {
    "confidence": 0.82,
    "id": "codebase_agent_workflow",
    "precision": 0.86,
    "recall": 0.75,
    "route_id": "codebase_agent_route_v1",
    "title": "Codebase Agent Workflow",
  },
  "recommended_route": [
    {
      "component_id": "user_goal_intake",
      "component_name": "User Goal Intake",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "small",
      "purpose": "Accepts and structures a free-text or structured goal from the user as the en…",
      "risk_level": "low",
      "step": 1,
    },
    {
      "component_id": "codebase_scan",
      "component_name": "Codebase Scan",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Reads and indexes the codebase to produce a structured context for downstream…",
      "risk_level": "low",
      "step": 2,
    },
    {
      "component_id": "plan_generation",
      "component_name": "Plan Generation",
      "compression_strategy": "chunk",
      "context_need": "large",
      "fallback_tier": "standard",
      "model_tier": "frontier",
      "purpose": "Produces a step-by-step implementation plan from a goal and codebase context",
      "risk_level": "low",
      "step": 3,
    },
    {
      "component_id": "code_editing",
      "component_name": "Code Editing",
      "compression_strategy": "chunk",
      "context_need": "large",
      "fallback_tier": "standard",
      "model_tier": "frontier",
      "purpose": "Applies targeted code changes to files based on a plan step, using LLM-genera…",
      "risk_level": "medium",
      "step": 4,
    },
    {
      "component_id": "test_runner",
      "component_name": "Test Runner",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Runs the project test suite after code changes and reports pass/fail with dif…",
      "risk_level": "low",
      "step": 5,
    },
    {
      "component_id": "pr_summary",
      "component_name": "PR Summary",
      "compression_strategy": "summarise",
      "context_need": "moderate",
      "fallback_tier": "small",
      "model_tier": "standard",
      "purpose": "Generates a structured pull request description from the changes made and the…",
      "risk_level": "low",
      "step": 6,
    },
    {
      "component_id": "state_store",
      "component_name": "State Store",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Persists workflow state, intermediate results and session context across step…",
      "risk_level": "low",
      "step": 7,
    },
    {
      "component_id": "human_approval_gate",
      "component_name": "Human Approval Gate",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Pauses the workflow and requires explicit human approval before any irreversi…",
      "risk_level": "low",
      "step": 8,
    },
  ],
  "route_score": 69,
  "route_status": "validated",
  "safety_review": {
    "approval_gates_required": [],
    "blocking_issues": [],
    "risk_score": 0,
    "status": "pass",
    "warnings": [],
  },
  "stack": {
    "id": "default_orchestratekit_stack",
    "name": "Default OrchestrateKit Stack",
    "summary": "[text]",
  },
  "summary_markdown": "[text]",
  "untested_edges": [
    {
      "id": "code_editing__produces__pr_summary",
      "severity": "medium",
    },
    {
      "id": "plan_generation__tested__test_runner",
      "severity": "medium",
    },
    {
      "id": "test_runner__before__pr_summary",
      "severity": "medium",
    },
  ],
  "worker_pipeline": {
    "feedback_loops": [
      {
        "contract": "reviewer.outputs → coder.inputs",
        "from": "reviewer",
        "to": "coder",
      },
      {
        "contract": "tester.outputs → coder.inputs",
        "from": "tester",
        "to": "coder",
      },
    ],
    "handoffs": [
      {
        "contract": "planner.outputs → coder.inputs",
        "from": "planner",
        "to": "coder",
      },
      {
        "contract": "coder.outputs → reviewer.inputs",
        "from": "coder",
        "to": "reviewer",
      },
      {
        "contract": "reviewer.outputs → tester.inputs",
        "from": "reviewer",
        "to": "tester",
      },
    ],
    "workers": [
      {
        "allowed_tools": [
          "plan_workflow",
          "list_known_routes",
          "get_route",
          "explain_component",
          "recommend_architecture",
        ],
        "forbidden_tools": [
          "file_write",
          "code_write",
          "git_commit",
          "external_publish",
          "deploy",
        ],
        "hands_off_to": [
          "coder",
        ],
        "inputs": [
          "user goal in plain language",
          "constraints (read-only vs write, attended vs unattended, outbound sends)",
        ],
        "model_tier": "frontier",
        "outputs": [
          "ordered workflow plan (component list + execution order)",
          "safety requirements (approval gates, irreversible actions flagged)",
          "explicit assumptions and open questions",
        ],
        "quality_gates": [
          "must identify irreversible / external-write actions and require an approval gate",
          "must mark every assumption explicitly rather than guessing silently",
          "must separate deterministic steps from LLM-driven steps",
          "must refuse to plan a vague goal and ask for it instead (needs_goal)",
        ],
        "role": "planner",
        "step": 1,
        "title": "Planner",
        "worker_id": "planner",
      },
      {
        "allowed_tools": [
          "file_write",
          "code_write",
          "git_commit",
          "run_build",
          "file_read",
        ],
        "forbidden_tools": [
          "deploy",
          "external_publish",
          "git_push_main",
        ],
        "hands_off_to": [
          "reviewer",
        ],
        "inputs": [
          "workflow plan (component list + execution order)",
          "safety requirements from the planner",
        ],
        "model_tier": "standard",
        "outputs": [
          "implementation / code diff scoped to the plan",
          "build notes (what was wired, what was left as a stub)",
        ],
        "quality_gates": [
          "must implement only the components named in the plan",
          "must not add external writes or side effects the plan did not authorise",
          "must keep the change scoped to one task",
          "must leave a build that compiles",
        ],
        "role": "coder",
        "step": 2,
        "title": "Coder",
        "worker_id": "coder",
      },
      {
        "allowed_tools": [
          "file_read",
          "code_read",
          "run_lint",
          "review_workflow_design",
          "record_session_feedback",
        ],
        "forbidden_tools": [
          "file_write",
          "code_write",
          "git_commit",
          "deploy",
          "external_publish",
        ],
        "hands_off_to": [
          "tester",
          "coder",
        ],
        "inputs": [
          "code diff from the coder",
          "workflow plan (component list + safety requirements)",
        ],
        "model_tier": "standard",
        "outputs": [
          "review findings (issues, severities)",
          "verdict — approved or changes-requested",
        ],
        "quality_gates": [
          "must not modify code — only report findings",
          "must flag any write / irreversible step that lacks an approval gate",
          "must check the diff matches the plan's component list",
        ],
        "role": "reviewer",
        "step": 3,
        "title": "Reviewer",
        "worker_id": "reviewer",
      },
      {
        "allowed_tools": [
          "run_tests",
          "run_build",
          "file_read",
          "record_session_feedback",
        ],
        "forbidden_tools": [
          "file_write",
          "code_write",
          "deploy",
          "external_publish",
        ],
        "hands_off_to": [
          "coder",
        ],
        "inputs": [
          "implementation from the coder (post-review)",
          "acceptance criteria / probes to run",
        ],
        "model_tier": "small",
        "outputs": [
          "test results (pass/fail per check)",
          "raw failure output for any failing test",
        ],
        "quality_gates": [
          "must run the real test suite — never fabricate or assume results",
          "must report failures verbatim with their output",
          "must not edit source to make a failing test pass",
        ],
        "role": "tester",
        "step": 4,
        "title": "Tester",
        "worker_id": "tester",
      },
    ],
  },
}
`;

exports[`MAR-163 — plan_workflow output schema > composed plan conforms + golden snapshot 1`] = `
{
  "approval_gate_advisory": null,
  "avoid_when_violations": [],
  "confidence_label": "medium",
  "credential_advisory": {
    "components_requiring_credentials": [
      {
        "component_id": "email_read",
        "required_scopes": [
          "mailbox read scope",
        ],
      },
      {
        "component_id": "crm_note_write",
        "required_scopes": [
          "CRM contact or lead record",
        ],
      },
      {
        "component_id": "optional_email_send",
        "required_scopes": [
          "external email send",
        ],
      },
    ],
    "secret_manager_recommendation": "[text]",
  },
  "enforced_approval_gates": [
    "human_approval_gate",
  ],
  "evals_to_add": [
    "[source_retrieval] recall@k on known document sets",
    "[text]",
    "[schema_validation] rejection rate on known-invalid test records",
    "[source_ranking] nDCG on ranked results vs human relevance judgements",
    "[research_synthesis] hallucination rate vs retrieved text",
  ],
  "execution_order": [
    "source_retrieval",
    "email_read",
    "schema_validation",
    "source_ranking",
    "research_synthesis",
    "citation_checker",
    "source_freshness_check",
    "email_draft",
    "human_approval_gate",
    "crm_note_write",
    "optional_email_send",
    "audit_log",
  ],
  "goal": "[text]",
  "model_tier_profile": {
    "frontier": [
      "research_synthesis",
    ],
    "none": [
      "source_retrieval",
      "email_read",
      "schema_validation",
      "citation_checker",
      "source_freshness_check",
      "human_approval_gate",
      "optional_email_send",
      "audit_log",
    ],
    "small": [
      "source_ranking",
      "crm_note_write",
    ],
    "standard": [
      "email_draft",
    ],
  },
  "next_steps": [
    "list_known_routes",
    "compose_workflow_route",
    "get_graph_component",
  ],
  "plan_source": "composed",
  "planning_order": [
    "source_retrieval",
    "crm_note_write",
    "email_read",
    "optional_email_send",
    "schema_validation",
    "source_ranking",
    "research_synthesis",
    "citation_checker",
    "source_freshness_check",
    "email_draft",
    "human_approval_gate",
    "audit_log",
  ],
  "playbook": null,
  "recommended_route": [
    {
      "component_id": "source_retrieval",
      "component_name": "Source Retrieval",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Fetches candidate documents or data from external or local sources based on a…",
      "risk_level": "low",
      "step": 1,
    },
    {
      "component_id": "email_read",
      "component_name": "Email Read",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Reads emails from a mailbox (IMAP or API) and extracts structured message data",
      "risk_level": "low",
      "step": 2,
    },
    {
      "component_id": "schema_validation",
      "component_name": "Schema Validation",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Validates records against a defined schema before they proceed to downstream …",
      "risk_level": "low",
      "step": 3,
    },
    {
      "component_id": "source_ranking",
      "component_name": "Source Ranking",
      "compression_strategy": "truncate",
      "context_need": "moderate",
      "fallback_tier": "none",
      "model_tier": "small",
      "purpose": "Scores and reorders retrieved source documents by relevance, authority and re…",
      "risk_level": "low",
      "step": 4,
    },
    {
      "component_id": "research_synthesis",
      "component_name": "Research Synthesis",
      "compression_strategy": "rank_and_drop",
      "context_need": "large",
      "fallback_tier": "standard",
      "model_tier": "frontier",
      "purpose": "Synthesises a grounded answer or summary from a ranked set of source document…",
      "risk_level": "medium",
      "step": 5,
    },
    {
      "component_id": "citation_checker",
      "component_name": "Citation Checker",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Verifies that LLM-generated citations exist, are reachable and match the clai…",
      "risk_level": "low",
      "step": 6,
    },
    {
      "component_id": "source_freshness_check",
      "component_name": "Source Freshness Check",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Checks whether retrieved sources are within an acceptable recency window for …",
      "risk_level": "low",
      "step": 7,
    },
    {
      "component_id": "email_draft",
      "component_name": "Email Draft",
      "compression_strategy": "summarise",
      "context_need": "moderate",
      "fallback_tier": "small",
      "model_tier": "standard",
      "purpose": "Composes a draft email response based on context, instructions and a prior me…",
      "risk_level": "medium",
      "step": 8,
    },
    {
      "component_id": "human_approval_gate",
      "component_name": "Human Approval Gate",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Pauses the workflow and requires explicit human approval before any irreversi…",
      "risk_level": "low",
      "step": 9,
    },
    {
      "component_id": "crm_note_write",
      "component_name": "CRM Note Write",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "small",
      "purpose": "Writes a structured note or activity record to a CRM system after human approval",
      "risk_level": "high",
      "step": 10,
    },
    {
      "component_id": "optional_email_send",
      "component_name": "Optional Email Send",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Sends a composed email draft after receiving explicit human approval",
      "risk_level": "high",
      "step": 11,
    },
    {
      "component_id": "audit_log",
      "component_name": "Audit Log",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Records every sensitive or external action taken by the workflow with timesta…",
      "risk_level": "low",
      "step": 12,
    },
  ],
  "route_score": 53,
  "route_status": "candidate",
  "safety_review": {
    "approval_gates_required": [],
    "blocking_issues": [],
    "risk_score": 24,
    "status": "warnings",
    "warnings": [
      "Multi-step workflow has no persistent state store declared.",
      "External API/network calls present without a retry policy.",
      "[text]",
    ],
  },
  "stack": {
    "id": "default_orchestratekit_stack",
    "name": "Default OrchestrateKit Stack",
    "summary": "[text]",
  },
  "summary_markdown": "[text]",
  "untested_edges": [
    {
      "id": "citation_checker__compatible__source_freshness_check",
      "severity": "low",
    },
    {
      "id": "source_retrieval__tested__research_synthesis",
      "severity": "medium",
    },
  ],
  "worker_pipeline": {
    "feedback_loops": [
      {
        "contract": "reviewer.outputs → coder.inputs",
        "from": "reviewer",
        "to": "coder",
      },
      {
        "contract": "tester.outputs → coder.inputs",
        "from": "tester",
        "to": "coder",
      },
    ],
    "handoffs": [
      {
        "contract": "planner.outputs → coder.inputs",
        "from": "planner",
        "to": "coder",
      },
      {
        "contract": "coder.outputs → reviewer.inputs",
        "from": "coder",
        "to": "reviewer",
      },
      {
        "contract": "reviewer.outputs → tester.inputs",
        "from": "reviewer",
        "to": "tester",
      },
    ],
    "workers": [
      {
        "allowed_tools": [
          "plan_workflow",
          "list_known_routes",
          "get_route",
          "explain_component",
          "recommend_architecture",
        ],
        "forbidden_tools": [
          "file_write",
          "code_write",
          "git_commit",
          "external_publish",
          "deploy",
        ],
        "hands_off_to": [
          "coder",
        ],
        "inputs": [
          "user goal in plain language",
          "constraints (read-only vs write, attended vs unattended, outbound sends)",
        ],
        "model_tier": "frontier",
        "outputs": [
          "ordered workflow plan (component list + execution order)",
          "safety requirements (approval gates, irreversible actions flagged)",
          "explicit assumptions and open questions",
        ],
        "quality_gates": [
          "must identify irreversible / external-write actions and require an approval gate",
          "must mark every assumption explicitly rather than guessing silently",
          "must separate deterministic steps from LLM-driven steps",
          "must refuse to plan a vague goal and ask for it instead (needs_goal)",
        ],
        "role": "planner",
        "step": 1,
        "title": "Planner",
        "worker_id": "planner",
      },
      {
        "allowed_tools": [
          "file_write",
          "code_write",
          "git_commit",
          "run_build",
          "file_read",
        ],
        "forbidden_tools": [
          "deploy",
          "external_publish",
          "git_push_main",
        ],
        "hands_off_to": [
          "reviewer",
        ],
        "inputs": [
          "workflow plan (component list + execution order)",
          "safety requirements from the planner",
        ],
        "model_tier": "standard",
        "outputs": [
          "implementation / code diff scoped to the plan",
          "build notes (what was wired, what was left as a stub)",
        ],
        "quality_gates": [
          "must implement only the components named in the plan",
          "must not add external writes or side effects the plan did not authorise",
          "must keep the change scoped to one task",
          "must leave a build that compiles",
        ],
        "role": "coder",
        "step": 2,
        "title": "Coder",
        "worker_id": "coder",
      },
      {
        "allowed_tools": [
          "file_read",
          "code_read",
          "run_lint",
          "review_workflow_design",
          "record_session_feedback",
        ],
        "forbidden_tools": [
          "file_write",
          "code_write",
          "git_commit",
          "deploy",
          "external_publish",
        ],
        "hands_off_to": [
          "tester",
          "coder",
        ],
        "inputs": [
          "code diff from the coder",
          "workflow plan (component list + safety requirements)",
        ],
        "model_tier": "standard",
        "outputs": [
          "review findings (issues, severities)",
          "verdict — approved or changes-requested",
        ],
        "quality_gates": [
          "must not modify code — only report findings",
          "must flag any write / irreversible step that lacks an approval gate",
          "must check the diff matches the plan's component list",
        ],
        "role": "reviewer",
        "step": 3,
        "title": "Reviewer",
        "worker_id": "reviewer",
      },
      {
        "allowed_tools": [
          "run_tests",
          "run_build",
          "file_read",
          "record_session_feedback",
        ],
        "forbidden_tools": [
          "file_write",
          "code_write",
          "deploy",
          "external_publish",
        ],
        "hands_off_to": [
          "coder",
        ],
        "inputs": [
          "implementation from the coder (post-review)",
          "acceptance criteria / probes to run",
        ],
        "model_tier": "small",
        "outputs": [
          "test results (pass/fail per check)",
          "raw failure output for any failing test",
        ],
        "quality_gates": [
          "must run the real test suite — never fabricate or assume results",
          "must report failures verbatim with their output",
          "must not edit source to make a failing test pass",
        ],
        "role": "tester",
        "step": 4,
        "title": "Tester",
        "worker_id": "tester",
      },
    ],
  },
}
`;

exports[`MAR-163 — plan_workflow output schema > needs_goal nudge conforms + golden snapshot (MAR-162) 1`] = `
{
  "example": "[text]",
  "reason": "looks like instructions/preamble (matched "orchestratemcp")",
  "status": "needs_goal",
  "summary_markdown": "[text]",
}
`;

exports[`MAR-163 — plan_workflow output schema > playbook plan conforms + golden snapshot 1`] = `
{
  "approval_gate_advisory": null,
  "avoid_when_violations": [],
  "confidence_label": "medium",
  "credential_advisory": {
    "components_requiring_credentials": [],
    "secret_manager_recommendation": null,
  },
  "enforced_approval_gates": [
    "human_approval_gate",
  ],
  "evals_to_add": [
    "[codebase_scan] symbol extraction accuracy on known test repositories",
    "[plan_generation] plan completeness vs human-authored plan on known tasks",
    "[code_editing] compilation pass rate after edit on test suite",
    "[test_runner] flakiness rate on repeated runs of same test suite",
    "[pr_summary] human preference score vs baseline on known PR test cases",
  ],
  "execution_order": [
    "user_goal_intake",
    "codebase_scan",
    "plan_generation",
    "code_editing",
    "test_runner",
    "pr_summary",
    "state_store",
    "human_approval_gate",
  ],
  "goal": "scan a codebase, plan changes, edit code, run tests and write a PR summary",
  "model_tier_profile": {
    "frontier": [
      "plan_generation",
      "code_editing",
    ],
    "none": [
      "codebase_scan",
      "test_runner",
      "state_store",
      "human_approval_gate",
    ],
    "small": [
      "user_goal_intake",
    ],
    "standard": [
      "pr_summary",
    ],
  },
  "next_steps": [
    "get_playbook({ id: "codebase_agent_workflow" })",
    "get_route({ id: "codebase_agent_route_v1", include_component_details: true })",
    "get_graph_component",
  ],
  "plan_source": "playbook",
  "planning_order": [
    "user_goal_intake",
    "codebase_scan",
    "plan_generation",
    "code_editing",
    "test_runner",
    "pr_summary",
    "human_approval_gate",
    "state_store",
  ],
  "playbook": {
    "confidence": 0.82,
    "id": "codebase_agent_workflow",
    "precision": 0.86,
    "recall": 0.75,
    "route_id": "codebase_agent_route_v1",
    "title": "Codebase Agent Workflow",
  },
  "recommended_route": [
    {
      "component_id": "user_goal_intake",
      "component_name": "User Goal Intake",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "small",
      "purpose": "Accepts and structures a free-text or structured goal from the user as the en…",
      "risk_level": "low",
      "step": 1,
    },
    {
      "component_id": "codebase_scan",
      "component_name": "Codebase Scan",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Reads and indexes the codebase to produce a structured context for downstream…",
      "risk_level": "low",
      "step": 2,
    },
    {
      "component_id": "plan_generation",
      "component_name": "Plan Generation",
      "compression_strategy": "chunk",
      "context_need": "large",
      "fallback_tier": "standard",
      "model_tier": "frontier",
      "purpose": "Produces a step-by-step implementation plan from a goal and codebase context",
      "risk_level": "low",
      "step": 3,
    },
    {
      "component_id": "code_editing",
      "component_name": "Code Editing",
      "compression_strategy": "chunk",
      "context_need": "large",
      "fallback_tier": "standard",
      "model_tier": "frontier",
      "purpose": "Applies targeted code changes to files based on a plan step, using LLM-genera…",
      "risk_level": "medium",
      "step": 4,
    },
    {
      "component_id": "test_runner",
      "component_name": "Test Runner",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Runs the project test suite after code changes and reports pass/fail with dif…",
      "risk_level": "low",
      "step": 5,
    },
    {
      "component_id": "pr_summary",
      "component_name": "PR Summary",
      "compression_strategy": "summarise",
      "context_need": "moderate",
      "fallback_tier": "small",
      "model_tier": "standard",
      "purpose": "Generates a structured pull request description from the changes made and the…",
      "risk_level": "low",
      "step": 6,
    },
    {
      "component_id": "state_store",
      "component_name": "State Store",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Persists workflow state, intermediate results and session context across step…",
      "risk_level": "low",
      "step": 7,
    },
    {
      "component_id": "human_approval_gate",
      "component_name": "Human Approval Gate",
      "compression_strategy": "none",
      "context_need": "minimal",
      "fallback_tier": "none",
      "model_tier": "none",
      "purpose": "Pauses the workflow and requires explicit human approval before any irreversi…",
      "risk_level": "low",
      "step": 8,
    },
  ],
  "route_score": 69,
  "route_status": "validated",
  "safety_review": {
    "approval_gates_required": [],
    "blocking_issues": [],
    "risk_score": 0,
    "status": "pass",
    "warnings": [],
  },
  "stack": {
    "id": "default_orchestratekit_stack",
    "name": "Default OrchestrateKit Stack",
    "summary": "[text]",
  },
  "summary_markdown": "[text]",
  "untested_edges": [
    {
      "id": "code_editing__produces__pr_summary",
      "severity": "medium",
    },
    {
      "id": "plan_generation__tested__test_runner",
      "severity": "medium",
    },
    {
      "id": "test_runner__before__pr_summary",
      "severity": "medium",
    },
  ],
  "worker_pipeline": {
    "feedback_loops": [
      {
        "contract": "reviewer.outputs → coder.inputs",
        "from": "reviewer",
        "to": "coder",
      },
      {
        "contract": "tester.outputs → coder.inputs",
        "from": "tester",
        "to": "coder",
      },
    ],
    "handoffs": [
      {
        "contract": "planner.outputs → coder.inputs",
        "from": "planner",
        "to": "coder",
      },
      {
        "contract": "coder.outputs → reviewer.inputs",
        "from": "coder",
        "to": "reviewer",
      },
      {
        "contract": "reviewer.outputs → tester.inputs",
        "from": "reviewer",
        "to": "tester",
      },
    ],
    "workers": [
      {
        "allowed_tools": [
          "plan_workflow",
          "list_known_routes",
          "get_route",
          "explain_component",
          "recommend_architecture",
        ],
        "forbidden_tools": [
          "file_write",
          "code_write",
          "git_commit",
          "external_publish",
          "deploy",
        ],
        "hands_off_to": [
          "coder",
        ],
        "inputs": [
          "user goal in plain language",
          "constraints (read-only vs write, attended vs unattended, outbound sends)",
        ],
        "model_tier": "frontier",
        "outputs": [
          "ordered workflow plan (component list + execution order)",
          "safety requirements (approval gates, irreversible actions flagged)",
          "explicit assumptions and open questions",
        ],
        "quality_gates": [
          "must identify irreversible / external-write actions and require an approval gate",
          "must mark every assumption explicitly rather than guessing silently",
          "must separate deterministic steps from LLM-driven steps",
          "must refuse to plan a vague goal and ask for it instead (needs_goal)",
        ],
        "role": "planner",
        "step": 1,
        "title": "Planner",
        "worker_id": "planner",
      },
      {
        "allowed_tools": [
          "file_write",
          "code_write",
          "git_commit",
          "run_build",
          "file_read",
        ],
        "forbidden_tools": [
          "deploy",
          "external_publish",
          "git_push_main",
        ],
        "hands_off_to": [
          "reviewer",
        ],
        "inputs": [
          "workflow plan (component list + execution order)",
          "safety requirements from the planner",
        ],
        "model_tier": "standard",
        "outputs": [
          "implementation / code diff scoped to the plan",
          "build notes (what was wired, what was left as a stub)",
        ],
        "quality_gates": [
          "must implement only the components named in the plan",
          "must not add external writes or side effects the plan did not authorise",
          "must keep the change scoped to one task",
          "must leave a build that compiles",
        ],
        "role": "coder",
        "step": 2,
        "title": "Coder",
        "worker_id": "coder",
      },
      {
        "allowed_tools": [
          "file_read",
          "code_read",
          "run_lint",
          "review_workflow_design",
          "record_session_feedback",
        ],
        "forbidden_tools": [
          "file_write",
          "code_write",
          "git_commit",
          "deploy",
          "external_publish",
        ],
        "hands_off_to": [
          "tester",
          "coder",
        ],
        "inputs": [
          "code diff from the coder",
          "workflow plan (component list + safety requirements)",
        ],
        "model_tier": "standard",
        "outputs": [
          "review findings (issues, severities)",
          "verdict — approved or changes-requested",
        ],
        "quality_gates": [
          "must not modify code — only report findings",
          "must flag any write / irreversible step that lacks an approval gate",
          "must check the diff matches the plan's component list",
        ],
        "role": "reviewer",
        "step": 3,
        "title": "Reviewer",
        "worker_id": "reviewer",
      },
      {
        "allowed_tools": [
          "run_tests",
          "run_build",
          "file_read",
          "record_session_feedback",
        ],
        "forbidden_tools": [
          "file_write",
          "code_write",
          "deploy",
          "external_publish",
        ],
        "hands_off_to": [
          "coder",
        ],
        "inputs": [
          "implementation from the coder (post-review)",
          "acceptance criteria / probes to run",
        ],
        "model_tier": "small",
        "outputs": [
          "test results (pass/fail per check)",
          "raw failure output for any failing test",
        ],
        "quality_gates": [
          "must run the real test suite — never fabricate or assume results",
          "must report failures verbatim with their output",
          "must not edit source to make a failing test pass",
        ],
        "role": "tester",
        "step": 4,
        "title": "Tester",
        "worker_id": "tester",
      },
    ],
  },
}
`;

exports[`MAR-163 — recommend_architecture output schema > ok branch conforms + golden snapshot 1`] = `
{
  "architecture": {
    "approval_gates": [
      "human_approval_gate",
      "auth_failure_handler",
    ],
    "deterministic_steps": [
      "email_read",
      "schema_validation",
      "reviewer_notification",
      "human_approval_gate",
      "auth_failure_handler",
      "optional_email_send",
      "audit_log",
    ],
    "do_not_build": [
      "[text]",
      "[text]",
      "[text]",
      "[text]",
      "[text]",
      "Playbook guidance: avoid when — bulk email outreach or marketing sends",
      "[text]",
    ],
    "evals": [
      "[user_goal_intake] goal parsing accuracy on diverse test inputs",
      "[text]",
      "[schema_validation] rejection rate on known-invalid test records",
    ],
    "llm_driven_steps": [
      "user_goal_intake",
      "intent_classifier",
      "email_draft",
    ],
    "pattern": "Multi-step orchestration pipeline with human approval gate",
    "route": [
      {
        "component_id": "user_goal_intake",
        "component_name": "User Goal Intake",
        "compression_strategy": "none",
        "context_need": "minimal",
        "fallback_tier": "none",
        "model_tier": "small",
        "purpose": "Accepts and structures a free-text or structured goal from the user as the en…",
        "risk_level": "low",
        "step": 1,
      },
      {
        "component_id": "email_read",
        "component_name": "Email Read",
        "compression_strategy": "none",
        "context_need": "minimal",
        "fallback_tier": "none",
        "model_tier": "none",
        "purpose": "Reads emails from a mailbox (IMAP or API) and extracts structured message data",
        "risk_level": "low",
        "step": 2,
      },
      {
        "component_id": "schema_validation",
        "component_name": "Schema Validation",
        "compression_strategy": "none",
        "context_need": "minimal",
        "fallback_tier": "none",
        "model_tier": "none",
        "purpose": "Validates records against a defined schema before they proceed to downstream …",
        "risk_level": "low",
        "step": 3,
      },
      {
        "component_id": "intent_classifier",
        "component_name": "Intent Classifier",
        "compression_strategy": "none",
        "context_need": "minimal",
        "fallback_tier": "none",
        "model_tier": "small",
        "purpose": "Classifies a user goal or message into a structured intent category to route …",
        "risk_level": "low",
        "step": 4,
      },
      {
        "component_id": "email_draft",
        "component_name": "Email Draft",
        "compression_strategy": "summarise",
        "context_need": "moderate",
        "fallback_tier": "small",
        "model_tier": "standard",
        "purpose": "Composes a draft email response based on context, instructions and a prior me…",
        "risk_level": "medium",
        "step": 5,
      },
      {
        "component_id": "reviewer_notification",
        "component_name": "Reviewer Notification",
        "compression_strategy": "none",
        "context_need": "minimal",
        "fallback_tier": "none",
        "model_tier": "none",
        "purpose": "Sends a targeted notification to a specific human reviewer or approver, signa…",
        "risk_level": "medium",
        "step": 6,
      },
      {
        "component_id": "human_approval_gate",
        "component_name": "Human Approval Gate",
        "compression_strategy": "none",
        "context_need": "minimal",
        "fallback_tier": "none",
        "model_tier": "none",
        "purpose": "Pauses the workflow and requires explicit human approval before any irreversi…",
        "risk_level": "low",
        "step": 7,
      },
      {
        "component_id": "auth_failure_handler",
        "component_name": "Auth Failure Handler",
        "compression_strategy": "none",
        "context_need": "minimal",
        "fallback_tier": "none",
        "model_tier": "none",
        "purpose": "Detects credential/permission failures from external integrations and degrade…",
        "risk_level": "low",
        "step": 8,
      },
      {
        "component_id": "optional_email_send",
        "component_name": "Optional Email Send",
        "compression_strategy": "none",
        "context_need": "minimal",
        "fallback_tier": "none",
        "model_tier": "none",
        "purpose": "Sends a composed email draft after receiving explicit human approval",
        "risk_level": "high",
        "step": 9,
      },
      {
        "component_id": "audit_log",
        "component_name": "Audit Log",
        "compression_strategy": "none",
        "context_need": "minimal",
        "fallback_tier": "none",
        "model_tier": "none",
        "purpose": "Records every sensitive or external action taken by the workflow with timesta…",
        "risk_level": "low",
        "step": 10,
      },
    ],
    "stack": {
      "id": "default_orchestratekit_stack",
      "name": "Default OrchestrateKit Stack",
      "summary": "[text]",
    },
    "state": {
      "components": [
        "audit_log",
      ],
      "needs": [
        "[text]",
      ],
      "recommendation": "Local storage: SQLite zero-config, switch when you have real concurrency needs.",
    },
    "tools": [
      "email_read",
      "optional_email_send",
    ],
    "why": "[text]",
  },
  "assumptions": [
    "Added audit_log because the route includes external actions.",
  ],
  "confidence": 0.62,
  "matched_playbook_ids": [
    "email_calendar_assistant",
  ],
  "next_recommended_tools": [
    "get_playbook",
    "get_route",
    "get_stack_recommendation",
    "get_relevant_docs",
  ],
  "next_steps": [
    "[text]",
    "[text]",
    "[text]",
    "Address the do-not-build guidance above before starting implementation.",
    "Write eval fixtures for the suggested evals — start with the first 2-3.",
    "Use \`get_stack_recommendation\` for detailed stack technology choices.",
    "[text]",
  ],
  "recommendation_markdown": "[text]",
  "route_id": "email_calendar_route_v1",
  "status": "candidate_route",
  "untested_edges": [
    "email_read__produces__intent_classifier",
    "user_goal_intake__produces__intent_classifier",
  ],
  "warnings": [
    "[text]",
    "[text]",
    "[text]",
  ],
}
`;

exports[`MAR-163 — review_workflow_design output schema > conforms + golden snapshot 1`] = `
{
  "approval_gates_required": [
    "human_approval_gate",
  ],
  "blocking_issues": [
    "External write/send/publish action detected without a human approval gate.",
    "[text]",
  ],
  "evals_to_add": [
    "[copy_generation] brand voice adherence score (human or automated)",
    "[copy_generation] legal risk flag rate on known sensitive topics",
    "[text]",
    "[text]",
  ],
  "graph_findings": [
    {
      "entity_id": "external_publish",
      "entity_type": "component",
      "message": "External write/send/publish action detected without a human approval gate.",
      "recommended_fix": "[text]",
      "severity": "critical",
    },
    {
      "entity_id": "external_publish__requires__human_approval_gate",
      "entity_type": "edge",
      "message": "[text]",
      "recommended_fix": "Add \`human_approval_gate\` to the workflow. It is required by \`external_publish\`.",
      "severity": "high",
    },
    {
      "entity_id": "retry_policy",
      "entity_type": "component",
      "message": "External API/network calls present without a retry policy.",
      "recommended_fix": "[text]",
      "severity": "medium",
    },
    {
      "entity_id": "audit_log",
      "entity_type": "component",
      "message": "No audit log declared for a workflow with external actions or high risk.",
      "recommended_fix": "[text]",
      "severity": "low",
    },
    {
      "entity_id": "external_publish",
      "entity_type": "component",
      "message": "[text]",
      "recommended_fix": "[text]",
      "severity": "medium",
    },
  ],
  "matching_playbook_ids": [],
  "missing_components": [
    "retry_policy",
    "audit_log",
  ],
  "next_recommended_tools": [
    "recommend_architecture",
    "get_playbook",
    "get_route",
    "get_graph_component",
  ],
  "recommended_changes": [
    "[text]",
    "Add \`human_approval_gate\` to the workflow. It is required by \`external_publish\`.",
  ],
  "risk_score": 62,
  "status": "fail",
  "summary_markdown": "[text]",
  "warnings": [
    "No evals or test cases mentioned in the workflow design.",
    "External API/network calls present without a retry policy.",
    "No audit log declared for a workflow with external actions or high risk.",
    "[text]",
  ],
}
`;
